# ML-PROJECT

./: .gitignore  Makefile  README.md  download_data.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: linear_regression_model.pkl  multiple_regression_model.pkl  poly_regression_model.pkl
notebooks/: predicted-computer-price.ipynb
src/: main.py  test_predict.py
src/data/: classification_data.py  raw_data.py  regression_data.py
src/modeling/: evaluation.py  evaluation_classification.ipynb  evaluation_regression.ipynb  evaluatoin_classification.ipynb  predict.py  train.py
src/modeling/classification/clustering/: model.py  predict.py  train.py
src/modeling/classification/clustering_classification/: model.py  predict.py  train.py
src/modeling/classification/custom_classification/: model.py  predict.py  train.py
src/modeling/classification/decision_tree/: model.py  predict.py
src/modeling/clustering/: train.py
src/modeling/custom_classification/: model.py  train.py
src/modeling/decision_tree/: model.py  train.py
src/modeling/linear_regression/: evaluation.ipynb  model.py  predict.py  train.py
src/modeling/logistic_regression/: predict.py  train.py
src/modeling/mlp/: model.py  predict.py  train.py
src/modeling/mlp_regression/: predict.py  train.py
src/modeling/multiple_regression/: evaluation.ipynb  model.py  train.py
src/modeling/perceptron/: model.py  predict.py  train.py
src/modeling/poly_regression/: evaluation.ipynb  model.py  predict.py  train.py
src/modeling/random_forest/: model.py  predict.py  train.py
src/modeling/svm/: train.py
src/models/: evaluation_regression.ipynb  evaluatoin_classification.ipynb
src/test/: test.py
(+171 files in other folders)
